# HALUnix

./: CMakeLists.txt  README.md  UnixSerial.h  conanfile.py  conanfile.txt
src/: UnixSerial.cpp  UnixSerial.h
test_package/: conanfile.py  example.cpp
